FIx more sonar issues